@@ -27,7 +27,7 @@
 apc_symmetra_ext_temp_default_levels = (30, 35)
 
 def inventory_temp(info):
-    return [ ( line[0], "", "apc_symmetra_ext_temp_default_levels" ) \
+    return [ ( line[0], "apc_symmetra_ext_temp_default_levels" ) \
             for line in info if line[1] == "2" ]
 
 def check_temp(item, params, info):
@@ -53,3 +53,5 @@ snmp_info['apc_symmetra_ext_temp'] = (
   [ 1, 3, 4 ] )
 
 snmp_scan_functions['apc_symmetra_ext_temp'] = lambda oid: oid(".1.3.6.1.2.1.1.2.0").startswith(".1.3.6.1.4.1.318.1.3")
+
+checkgroup_of["apc_symmetra_ext_temp"] = "room_temperature"
