@@ -29,7 +29,7 @@ wut_webtherm_defaultlevels = (30, 35)
 def inventory_webtherm(info):
     # line[0] is 1.1, 2.1, 3.1, 6.1, 8.1 or 16.1 depending on MIB variant. We chop
     # of the first part in order to get independent of that.
-    return [ (line[0].split(".")[1], "", "wut_webtherm_defaultlevels") for
+    return [ (line[0].split(".")[1], "wut_webtherm_defaultlevels") for
         line in info if len(line) == 2 ]
 
 def check_webtherm(item, params, info):
@@ -63,3 +63,4 @@ snmp_info['wut_webtherm'] = (
    ".1.3.6.1.4.1.5040.1.2", ["1", "2", "3", "6", "8", "16"],  [ "1.2.1.1", "1.3.1.1" ])
 
 snmp_scan_functions['wut_webtherm'] = detect_webtherm
+checkgroup_of["wut_webtherm"] = "room_temperature"
